docs/i18n/fr/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Raccourcis"
sidebar_position: 2
---

Il y a quelques raccourcis que vous pouvez utiliser dans l'éditeur. Certaines d'entre elles sont écrites sous les boutons.

## Généraux

* `Ctrl` + `N`: Nouveau fichier
* `Ctrl` + `Maj` + `N`: Nouveau fichier à partir du modèle
* `Ctrl` + `O`: Ouvrir le fichier
* `Ctrl` + `I`: Importer un fichier
* `Ctrl` + `E`: Exporter le fichier
* `Ctrl` + `Maj` + `E`: Exporter le fichier en tant qu'image
* `Ctrl` + `Alt` + `E`: Exporter le fichier en svg
* `Ctrl` + `Alt` + `S`: Ouvrir les paramètres

## Projet

* `Ctrl` + `Z`: Annuler
* `Ctrl` + `Y`: Refaire
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Maj` + `S`: Ouvrir les paramètres du projet
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Ouvrir la fenêtre de la palette de couleurs
* `Ctrl` + `B`: Ouvrir la boîte de dialogue d'arrière-plan
* `Ctrl` + `Maj` + `A`: Ouvrir la boîte de dialogue des zones
* `Ctrl` + `L`: Ouvrir la boîte de dialogue des calques
* `Ctrl` + `S`: Enregistrer
* `Alt` + `S`: Changer le chemin

## Stylus

* `Bouton primaire`: Passer à l'outil main
* `Bouton secondaire`: Passer au second peintre
